--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -1,2 +1,6 @@
 h1= title
-p Welcome to #{title}
+
+canvas#game(width='640', height='480')
+
+script(type='text/javascript', src='/javascripts/easeljs-0.4.2.min.js')
+script(type='text/javascript', src='/javascripts/main.js')
