Add ContentLoader class for initializing images.

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -3,4 +3,5 @@ h1= title
 canvas#game(width='640', height='480')
 
 script(type='text/javascript', src='/javascripts/easeljs-0.4.2.min.js')
+script(type='text/javascript', src='/javascripts/ContentLoader.js')
 script(type='text/javascript', src='/javascripts/main.js')
