Add Word class with some default styles. Tweak platform - fix width bug. Use 'NINJA' to define level.

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -7,4 +7,5 @@ script(type='text/javascript', src='/javascripts/Platform.js')
 script(type='text/javascript', src='/javascripts/Game.js')
 script(type='text/javascript', src='/javascripts/ContentLoader.js')
 script(type='text/javascript', src='/javascripts/Level.js')
+script(type='text/javascript', src='/javascripts/Word.js')
 script(type='text/javascript', src='/javascripts/main.js')
