--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -3,6 +3,7 @@ h1= title
 canvas#game(width='640', height='480')
 
 script(type='text/javascript', src='/javascripts/easeljs-0.4.2.min.js')
+script(type='text/javascript', src='/javascripts/Ninja.js')
 script(type='text/javascript', src='/javascripts/Platform.js')
 script(type='text/javascript', src='/javascripts/Game.js')
 script(type='text/javascript', src='/javascripts/ContentLoader.js')
